tests/paczka1/small_fuzzy/49478184.err
Error in line 4: ZWnElEbAwpN A97 64,3
Error in line 8: Manaf A97 85,4
